--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@openzeppelin/contracts": "^4.8.2",
+    "ethereum-waffle": "^4.0.10",
     "merkletreejs": "^0.3.9"
   }
 }
